[package]
name = "redacted-shared-rs"
version = "0.1.0"
edition = "2024"

include = [
    "src/**/*", "build.rs", "Cargo.toml",
    "/linker.ld", "/README.md", "/LICENSE",
]

[lib]
test = false
bench = false

[dependencies]
bitmask-enum = "2.2.5"
unix_path = { version = "1.0.1", default-features = false, features = ["alloc"] }

[build-dependencies]
cc = "1.0"
glob = "0.3.2"

[features]
